# rotp

./: .gitignore  .travis.yml  DESCRIPTION  LICENSE  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: auth.r  crypto.r  db.r  db_repl.r  hotp.r  otpdb.r  otpdb_utils.r  reactor.r  rotp-package.R  serialize.r  setup.r  totp.r  totp_repl.r  utils.r  zzz.r
man/: auth.Rd  hotp.Rd  otpdb.Rd  rotp-package.Rd  runauth.Rd  rundb.Rd  totp.Rd
src/: Makevars  Makevars.in  Makevars.win  otp.c  rotp_native.c  rsa_keys.c  rstuff.h  totp.cpp
src/oath/: LICENSE  base32.c  base32.h  endianness.h.in  hmac.c  hmac.h  oath.h  totp.c
src/oath/windows/: endianness.h
tests/: hotp.r
tools/: get_winlib.R
